# arrowdantic

./: .github_changelog_generator  .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
arrowdantic/: __init__.py
packaging/: build_many.sh
src/: array.rs  datatypes.rs  error.rs  file_like.rs  io.rs  iterator.rs  lib.rs  py_file.rs
src/io/: ipc.rs  mod.rs  odbc.rs  parquet.rs
tests/: test_basics.py
