[package]
name = "arrowdantic"
version = "0.2.2"
license = "Apache-2.0"
description = "Arrow, pydantic style"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
keywords = [ "analytics", "arrow", "ODBC", "parquet" ]
homepage = "https://github.com/jorgecarleitao/arrowdantic"
repository = "https://github.com/jorgecarleitao/arrowdantic"
edition = "2021"

[lib]
name = "arrowdantic"
crate-type = ["cdylib"]

[dependencies]
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2", branch = "odbc_fix", features=["io_ipc", "io_parquet", "io_parquet_compression", "io_odbc"] }
pyo3 = { version = "0.16", features = ["extension-module"] }
# ODBC requires a global state
once_cell = "1"
